spring - 회원, 주문, 할인 도메인 추가