@@ -7,6 +7,11 @@ plugins {
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
 
+test {
+// previous JVM options
+	jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage") // add this
+}
+
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
